k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tt-ingress
  namespace: tt
spec:
  ingressClassName: nginx
  rules:
  - host: "my-app.example.com"
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
      - path: /api/tasks
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3500
